--- a/GREEN/green-svc.yml
+++ b/GREEN/green-svc.yml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v1
 kind: Service
-metadata:
+metadata: 
   name: green-svc
 spec:
     type: NodePort
@@ -9,5 +9,7 @@ spec:
        color: green
        version: v2
     ports:
-       - nodePort: 31785   
+       - port: 80
+         targetPort: 8080
+         nodePort: 31787  
 ...
